# maccabistats

./: .gitattributes  .gitignore  CHANGELOG.md  Change-log.txt  Create-package.bat  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  settings.ini  setup.py
.github/workflows/: show_maccabipedia_errors.yaml  upload_maccabipedia_games_to_maccabipedia_ftp.yaml
get_stats/: competition_types.py  game_data.py  games_from_maccabi_site.py  maccabi_site_games_wrapper.py  maccabi_site_team_in_game.py  seasons_from_maccabi_site.py  team_in_game.py
maccabi_stats/: .gitattributes  games_crawler.py  maccabi_site_game_data.py  maccabi_site_games_wrapper.py  maccabi_site_team_in_game.py  player_in_game.py  seasons_crawler.py  test.py
maccabi_stats/config/: config.py
maccabi_stats/models/: competition_types.py  game_data.py  player.py  player_game_events.py  player_in_game.py  team.py  team_in_game.py
maccabi_stats/parse/: games_crawler.py  parse_from_all_sites.py  seasons_crawler.py
maccabi_stats/stats/: maccabi.games  maccabi_games_stats.py  maccabi_site_games_wrapper.py  serialized_games.py
maccabistats/: __init__.py  maccabilogging.py  test.py  version.py
maccabistats/config/: config.py  settings.ini
maccabistats/data_improvement/: fix_specific_games.py  manual_fixes.py  naming_fixes.py
maccabistats/error_finder/: error_finder.py
maccabistats/maccabipedia/: players.py
maccabistats/models/: competition_types.py  game_data.py  player.py  player_game_events.py  player_in_game.py  team.py  team_in_game.py
maccabistats/parse/: add_manual_games.py  general_fixes.py  maccabistats_source.py  merge_sources.py  name_normalization.py  parse_from_all_sites.py  sources.py  teams_names_changer.py
maccabistats/scripts/: achievements.json  goals_types_distribution_for_player.py  maccabi_on_buzzer_wins.py  players_by_titles.json  players_with_double_double.py  top_players_by_achievements.py  top_scorers_players_by_teams_count.py
maccabistats/stats/: average.py  averages.py  coaches.py  comebacks.py  graphs.py  important_goals.py  maccabi.games  maccabi_games_stats.py  players.py  players_categories.py  players_events_sumamry.py  players_first_and_last_games.py  players_games_condition.py  players_special_games.py  players_streaks.py  referees.py  results.py  seasons.py  serialized_games.py  streaks.py  (+2 more)
scripts/: create_wheel.bat  find_maccabipedia_errors.py  run_mypy.bat
tests/: conftest.py  test_export.py  test_opponents.py  test_sanity.py
(+111 files in other folders)
